--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "An api wrapper for the hilltop hydro service",
   "main": "index.js",
   "scripts": {
-    "deploy:patch": "npm run test && node_modules/.bin/xyz -i patch",
-    "deploy:minor": "npm run test && node_modules/.bin/xyz -i minor",
-    "deploy:major": "npm run test && node_modules/.bin/xyz -i major",
+    "deploy:patch": "npm run test && npm run docs && node_modules/.bin/xyz -i patch",
+    "deploy:minor": "npm run test && npm run docs && node_modules/.bin/xyz -i minor",
+    "deploy:major": "npm run test && npm run docs && node_modules/.bin/xyz -i major",
+    "docs": "docco index.js",
     "test": "node_modules/.bin/mocha -u mocha-given --compilers js:mocha-babel *.spec.js",
     "test:watch": "node_modules/.bin/testem"
   },
